# sightglass

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  ORG_CODE_OF_CONDUCT.md  README.md  config.inc  history.json.bak  sg_container_runner.sh  sg_runner.py  sg_webui_run.sh  sg_webui_start.sh  sightglass.toml  test-all.sh
.cargo/: config.toml
.github/scripts/: callgrind.mjs  resolve-wasmtime-ref.mjs
.github/workflows/: benchmarks.yml  benchmarks_native.yaml  callgrind.yml  node.js.yml  rust.yml  sg-history.yml  sg-view.yml  sightglass-result-server.yml  sightglass.yml
benchmarks/: .gitignore  Dockerfile-shootout.native  Dockerfile.emscripten  Dockerfile.native  Dockerfile.rust  Dockerfile.tinygo  Dockerfile.wasi-sdk  Dockerfile.wasm-tools  README.md  all.suite  build-all-native.sh  build-all.sh  build-native.sh  build.sh  check-incomplete-suite.sh  clean.sh  default.suite  gc.suite  run-all.sh  run-native.sh  rust.suite  shootout.suite  simd.suite  spidermonkey.suite  split-suite.sh  tinygo.suite
benchmarks-next/: .gitignore  Dockerfile.wasi-sdk  README.md  build-all.sh  build.sh  clean.sh  convert.sh  run-all.sh  run.sh
benchmarks-next/blake3-scalar/: Dockerfile  benchmark.wasm  default.input  stderr.expected
benchmarks-next/blake3-simd/: Dockerfile  benchmark.c  benchmark.wasm  benchmark.wat  stderr.expected
benchmarks-next/bz2/: default.input  stdout.expected
benchmarks-next/meshoptimizer/: README.md  stdout.expected
benchmarks-next/noop/: Dockerfile  README.md  benchmark.wasm  benchmark.wat  stdout.expected
benchmarks-next/pulldown-cmark/: Dockerfile  README.md  benchmark.wasm
benchmarks-next/shootout-ackermann/: README.md  benchmark.c  benchmark.wasm  benchmark.wat  stdout.expected
benchmarks-next/shootout-base64/: benchmark.c  benchmark.wasm  benchmark.wat
benchmarks-next/shootout-ctype/: Dockerfile  benchmark.wasm  benchmark.wat
benchmarks-next/shootout-ed25519/: benchmark.c  benchmark.wasm  benchmark.wat
benchmarks-next/shootout-fib2/: benchmark.c  benchmark.wasm  benchmark.wat  stdout.expected
benchmarks-next/shootout-gimli/: Dockerfile  benchmark.wasm  benchmark.wat
benchmarks-next/shootout-heapsort/: benchmark.c  benchmark.wasm  benchmark.wat
benchmarks-next/shootout-keccak/: benchmark.wasm  benchmark.wat
benchmarks-next/shootout-matrix/: benchmark.c  benchmark.wasm  benchmark.wat
benchmarks-next/shootout-memmove/: benchmark.wasm  benchmark.wat
benchmarks-next/shootout-minicsv/: benchmark.c  benchmark.wasm  benchmark.wat
benchmarks-next/shootout-nestedloop/: benchmark.wasm  benchmark.wat  sightglass.h
benchmarks-next/shootout-random/: benchmark.c  benchmark.wasm  benchmark.wat
benchmarks-next/shootout-seqhash/: benchmark.wasm
benchmarks-next/shootout-sieve/: benchmark.c  stdout.expected
benchmarks-next/shootout-xblabla20/: benchmark.wasm
benchmarks-next/shootout-xchacha20/: benchmark.wasm
benchmarks-next/spidermonkey/: Dockerfile  build.sh
benchmarks/blake3-scalar/: Dockerfile  README.md  benchmark.stderr.expected  benchmark.wasm  default.input  small.input
benchmarks/blake3-simd/: Dockerfile  README.md  benchmark.c  benchmark.stderr.expected  benchmark.wasm  blake3-wasm-sse2.patch  wasm_sse_compat.h
benchmarks/blind-sig/: Dockerfile  README.md  benchmark.stdout.expected  benchmark.wasm  secret.der
benchmarks/bz2/: benchmark.c  benchmark.stdout.expected  benchmark.wasm  default.input
benchmarks/cm-online-stats/: README.md  cm-online-stats.stdout.expected  cm-online-stats.wasm  cm-online-stats.wat  default.input
benchmarks/gcc-loops/: Dockerfile  benchmark.wasm  gcc-loops.cpp  (+1 more)
benchmarks/image-classification/rust-benchmark/: Cargo.toml
benchmarks/image-classification/rust-benchmark/src/: main.rs  onnx.rs  openvino.rs
benchmarks/rust-protobuf/rust-benchmark/: .gitignore  Cargo.toml  build.rs
benchmarks/rust-protobuf/rust-benchmark/src/: converter.rs  main.rs
benchmarks/tract-onnx-image-classification/rust-benchmark/: Cargo.toml
benchmarks/tract-onnx-image-classification/rust-benchmark/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: analyze.rs  benchmark.rs  build.rs  build_benchmark.rs  build_engine.rs  clean.rs  counter.rs  effect_size.rs  fingerprint.rs  list_engines.rs  main.rs  pca_metrics.rs  report.jinja  report.rs  suite.rs  summarize.rs  upload.rs  validate.rs
crates/cli/src/pca_metrics/: category.rs  dynamic_metrics.rs  static_metrics.rs
crates/cli/src/pca_metrics/dynamic_metrics/: component.rs
crates/cli/tests/: multi_engine_v38.json  multi_engine_v38_epoch.json  results.json  tests.rs
crates/cli/tests/all/: benchmark.rs  clean.rs  effect_size.rs  fingerprint.rs  help.rs  main.rs  pca_metrics.rs  report.rs  summarize.rs  upload.rs  util.rs  validate.rs
crates/fingerprint/: Cargo.toml
crates/fingerprint/src/: benchmark.rs  engine.rs  hash.rs  lib.rs  machine.rs  util.rs
crates/recorder/: Cargo.toml  README.md
crates/recorder/src/: bench_api.rs  benchmark.rs  lib.rs
crates/recorder/src/cpu_affinity/: affinity_core_affinity.rs  affinity_hwloc.rs  mod.rs
crates/recorder/src/measure/: callgrind.rs  counters.rs  cycles.rs  insts.rs  mod.rs  multi.rs  noop.rs  time.rs  vtune.rs  wall_cycles.rs
crates/upload/: Cargo.toml
crates/upload/src/: database.rs  lib.rs  measurement.rs
docs/: cpu-isolation.md  legacy.md  next.md  vtune.md
engines/: README.md
engines/native/libengine/: Cargo.toml
engines/native/libengine/src/: lib.rs
example/: example.c
include/: sightglass-next.h  sightglass.h
results/: send.sh
scripts/: clusters.py  pca.R  viz.jinja  viz.py
src/: bench.rs  config.rs  errors.rs  main.rs  out.rs  perf.rs  symbols.rs  sysopts.rs
webui/: Dockerfile  config.inc  sg_webui_build.sh  sg_webui_run.sh  sg_webui_start.sh  sg_webui_stop.sh
webui/sg-history/: Cargo.toml
webui/sg-history/src/: history.rs  main.rs
webui_runner/: Dockerfile  config.inc  sg_container_runner.sh  sg_image_build.sh  sg_runner.py  sg_template.toml
(+565 files in other folders)
