[package]
name = "sightglass"
version = "0.1.0"
authors = ["Frank Denis <fdenis@fastly.com>"]
edition = "2018"
description = "A benchmark suite and tool to compare different implementations of the same primitives"
keywords = ["benchmark", "benchmarking", "performance"]
homepage = "https://github.com/fastly/sightglass"
repository = "https://github.com/fastly/sightglass"
license = "Apache-2.0 WITH LLVM-exception OR MIT"

[dependencies]
bencher = "0.1"
clap = "2"
failure = "0.1"
goblin = "0.0"
libc = "0.2"
libloading = "0.5"
precision = "0.1.10"
printtable = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.5"
xfailure = "0.1"

[target.'cfg(any(target_os="windows",target_os="macos",target_os="linux"))'.dependencies]
core_affinity="0.5.9"

[target.'cfg(not(any(target_os="windows",target_os="macos",target_os="linux")))'.dependencies]
hwloc = "0.5"
