[package]
name = "sightglass"
version = "0.1.0"
authors = ["Frank Denis <fdenis@fastly.com>"]
edition = "2018"
description = "A benchmark suite and tool to compare different implementations of the same primitives"
keywords = ["benchmark", "benchmarking", "performance"]
homepage = "https://github.com/fastly/sightglass"
repository = "https://github.com/fastly/sightglass"
license = "Apache-2.0 WITH LLVM-exception OR MIT"

[dependencies]
bencher = "0.1"
clap = "2"
goblin = "0.0"
libc = "0.2"
libloading = "0.7"
precision = "0.1.11"
printtable = "0.1"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.60"
thiserror = "1"
toml = "0.5"

[target.'cfg(any(target_os="windows",target_os="macos",target_os="linux"))'.dependencies]
core_affinity="0.5.9"

[target.'cfg(not(any(target_os="windows",target_os="macos",target_os="linux")))'.dependencies]
hwloc = "0.5"

[workspace]
members = [
    "crates/analysis",
    "crates/api",
    "crates/build",
    "crates/cli",
    "crates/data",
    "crates/fingerprint",
    "crates/recorder",
    "webui/sg-history"
]
default-members = [
    "crates/cli"
]

[dev-dependencies]
serde_json = "1.0.64"
