[package]
name = "sightglass-cli"
version = "0.1.0"
authors = ["Sightglass Project Developers"]
edition = "2018"

[dependencies]
anyhow = "1.0"
libloading = "0.6"
log = "0.4"
pretty_env_logger = "0.4"
sightglass-artifact = { path = "../artifact" }
sightglass-analysis = { path = "../analysis" }
sightglass-data = { path = "../data" }
sightglass-recorder = { path = "../recorder" }
structopt = { version = "0.3", features = ["color", "suggestions"] }
thiserror = "1.0"
rand = { version = "0.7.3", features = ["small_rng"] }
