[package]
name = "sightglass-cli"
version = "0.1.0"
authors = ["Sightglass Project Developers"]
edition = "2021"

[dependencies]
anyhow = "1.0"
libloading = "0.7"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0.64"
sightglass-analysis = { path = "../analysis" }
sightglass-build = { path = "../build" }
sightglass-data = { path = "../data" }
sightglass-fingerprint = { path = "../fingerprint" }
sightglass-recorder = { path = "../recorder" }
structopt = { version = "0.3", features = ["color", "suggestions"] }
thiserror = "1.0"
rand = { version = "0.7.3", features = ["small_rng"] }
csv = "1.1.6"
regex = "1.5.4"

[dev-dependencies]
assert_cmd = "1.0.4"
env_logger = "0.8.3"
predicates = "1.0.8"
tempfile = "3.2.0"
