[package]
name = "sightglass-cli"
version = "0.1.0"
authors = ["Sightglass Project Developers"]
edition = "2021"

[dependencies]
anyhow = "1.0"
libloading = "0.9"
log = "0.4"
pretty_env_logger = "0.4"
serde = "1"
serde_json = "1.0.64"
sightglass-analysis = { path = "../analysis" }
sightglass-build = { path = "../build" }
sightglass-data = { path = "../data" }
sightglass-fingerprint = { path = "../fingerprint" }
sightglass-recorder = { path = "../recorder" }
sightglass-upload = { path = "../upload" }
structopt = { version = "0.3", features = ["color", "suggestions"] }
thiserror = "1.0"
rand = { version = "0.7.3", features = ["small_rng"] }
csv = "1.1.6"
regex = "1.5.4"
vega_lite_4 = { git = "https://github.com/procyon-rs/vega_lite_4.rs" }
minijinja = "2.10"

[dev-dependencies]
assert_cmd = "1.0.4"
env_logger = "0.8.3"
predicates = "1.0.8"
tempfile = "3.2.0"
scraper = "0.24"
