[package]
name = "sightglass-fingerprint"
version = "0.1.0"
description = "Collect metadata for various parts of Sightglass"
authors = ["Sightglass Project Developers"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bytesize = "1.1"
hostname = "0.3"
log = "0.4"
os_info = "3.2"
regex = "1.5"
serde = { version = "1.0.136", features = ["derive"] }
sha2 = "0.10"
sightglass-build = { path = "../build" }
sysinfo = "0.28"
