[package]
name = "sightglass-recorder"
version = "0.1.0"
description = "A measurement tool for compiling and running a single Wasm benchmark"
authors = ["Sightglass Project Developers"]
edition = "2018"

[dependencies]
anyhow = "1.0"
libloading = "0.6"
log = "0.4"
precision = "0.1"
serde = { version = "1.0.118", features = ["derive"] }
sightglass-artifact = { path = "../artifact" }
sightglass-data = { path = "../data" }
thiserror = "1.0"
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4"
wat = "1.0"
