[package]
name = "sightglass-recorder"
version = "0.1.0"
description = "A measurement tool for compiling and running a single Wasm benchmark"
authors = ["Sightglass Project Developers"]
edition = "2021"

[dependencies]
anyhow = "1.0"
libloading = "0.7"
log = "0.4"
precision = { git = "https://github.com/posborne/rust-precision.git", branch = "target-stable-asm" }
serde = { version = "1.0.118", features = ["derive"] }
sightglass-build = { path = "../build" }
sightglass-data = { path = "../data" }
thiserror = "1.0"
lazy_static = "1.4"
ittapi = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
perf-event = "0.4"
# On supported platforms, we use libc's `sched_getcpu` to log the processor ID.
libc = "0.2"

# There are multiple implementations for pinning the benchmark to a single core.
[target.'cfg(any(target_os="windows",target_os="macos",target_os="linux"))'.dependencies]
core_affinity="0.5.9"
[target.'cfg(not(any(target_os="windows",target_os="macos",target_os="linux")))'.dependencies]
hwloc = "0.5"

[dev-dependencies]
pretty_env_logger = "0.4"
wat = "1.0"
