[package]
name = "sightglass-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.118", features = ["derive", "rc"] }
serde_json = "1.0.60"
sightglass-data = { path = "../data" }
sightglass-fingerprint = { path = "../fingerprint" }
