[package]
name = "image-classification-benchmark"
version = "0.1.0"
authors = ["The Bytecode Alliance Developers"]
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["jpeg"]  }
wasi-nn = "0.5.0"
sightglass-api = "0.1"

[workspace]

[[bin]]
name = "image-classification-benchmark-onnx"
path = "src/onnx.rs"

[[bin]]
name = "image-classification-benchmark-openvino"
path = "src/openvino.rs"
