[package]
name = "image-classification-benchmark"
version = "0.1.0"
authors = ["The Bytecode Alliance Developers"]
readme = "README.md"
edition = "2021"
publish = false

[dependencies]
image = { version = "0.23.14", default-features = false, features = ["jpeg"]  }
wasi-nn = "0.2.1"
sightglass-api = "0.1"

[workspace]
