[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "benchmark"
path = "src/main.rs"

[[bin]]
name = "converter"
path = "src/converter.rs"

[dependencies]
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sightglass-api = "0.1"

[build-dependencies]
prost-build = "0.13"

[workspace]
