[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bytes = "1.5.0"
prost = "0.11.0"
image = { version = "0.25.1", features = ["png"], default-features = false }
tract-onnx = "0.21.4"
